--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
   "name": "rpg-slime",
   "version": "1.0.0",
-  "description": "RPG Slime game with Phaser",
-  "main": "index.js",
+  "description": "RPG Slime multiplayer game with Phaser",
+  "main": "server/index.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
+    "server:dev": "nodemon server/index.js",
+    "client:dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "start": "node server/index.js",
     "serve": "http-server dist -p 8080"
   },
   "dependencies": {
-    "phaser": "^3.70.0"
+    "phaser": "^3.70.0",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "vite": "^5.0.0",
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "nodemon": "^3.0.2",
+    "concurrently": "^8.2.2"
   },
-  "keywords": ["phaser", "game", "rpg", "slime"],
+  "keywords": ["phaser", "game", "rpg", "slime", "multiplayer", "io"],
   "author": "",
   "license": "MIT"
 } 
